usermanagement/usermgmtdep.yaml
apiVersion: v1
kind: Service
metadata:
  name: usermanagement-service
  labels:
    app: usermanagement-service
spec:
  ports:
    - name: http
      port: 8000
  selector:
    app: usermanagement-service
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: usermanagement-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: usermanagement-service
        version: v1
    spec:
      containers:
        - name: usermanagement-app
          image: gcr.io/brainiac-265813/usermanagement:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
